--- a/connect4/connect4-deployment.yml
+++ b/connect4/connect4-deployment.yml
@@ -10,9 +10,8 @@ spec:
         type: front-end
     spec:
       containers:
-        - image: connect4-prod
+        - image: biplopdey/connect4-app:v1
           name: connect4-prod-image
-          imagePullPolicy: Never
   replicas: 2
   selector:
     matchLabels:
