--- a/connect4-full-stack/test/backend.yml
+++ b/connect4-full-stack/test/backend.yml
@@ -1,30 +1,31 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: spring-boot-app
+  name: app-api
 spec:
-  replicas: 1
   selector:
     matchLabels:
-      app: spring-boot-app
+      app: app-api
+  replicas: 1
   template:
     metadata:
       labels:
-        app: spring-boot-app
+        app: app-api
     spec:
       containers:
-        - name: spring-boot-container
-          image: biplopdey/spring-boot-app
+        - name: citizen-app-api
+          image: anupam007/spring-boot-gradle-template:0.0.1
+          imagePullPolicy: Always
           ports:
             - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: spring-boot-service
+  name: springbootgradle-service
 spec:
   selector:
-    app: spring-boot-app
+    app: app-api
   ports:
     - port: 8080
       nodePort: 30001
